--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "ignore": [
         "/*.*",
         "**/.*",
-        "/demo/.*",
+        "demo/**/.*",
         "node_modules",
         "bower_components",
         "app/bower_components",
