--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {},
   "repository": "https://github.com/MrFrankel/ruler.git",
   "description": "canvas rulers",
+  "scripts": {
+    "serve": "grunt serve"
+  },
   "devDependencies": {
     "connect-modrewrite": "^0.7.6",
     "grunt-bower-install": "^1.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^1.0.0",
